--- a/100DaysOfCodeChallenge/booklibrary/frontend/public/index.html
+++ b/100DaysOfCodeChallenge/booklibrary/frontend/public/index.html
@@ -24,6 +24,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Library Book Collection Application" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
     <title>Book Library</title>
   </head>
   <body>
